--- a/i18n/anthy/HISTORY
+++ b/i18n/anthy/HISTORY
@@ -1,3 +1,6 @@
+2008-03-16 Remko van der Vossen <wich@sourcemage.org>
+	* DETAILS: version 9100e
+
 2007-11-15 Remko van der Vossen <wich@sourcemage.org>
 	* DETAILS: version 9100d
 
