--- a/gnome2-libs/libgdamm/HISTORY
+++ b/gnome2-libs/libgdamm/HISTORY
@@ -1,3 +1,6 @@
+2008-03-16 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 3.0.0
+
 2006-09-21 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed BUILD_API=2.
 
