--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-03-17 Juuso Alasuutari <iuso@sourcemage.org>
+	* audio-creation/non: New spell, a pattern-based MIDI sequencer.
+
 2008-03-15 Ladislav Hagara <hgr@vabo.cz>
 	* crypto/ophcrack: new spell
 	  a Windows password cracker based on rainbow tables
