--- a/xorg-data/xorg-data-profile/HISTORY
+++ b/xorg-data/xorg-data-profile/HISTORY
@@ -1,3 +1,7 @@
+2008-03-16 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: xfree86-lib -> xfree86-libs
+	  xfree86-43 -> xfree86-4.3
+
 2005-12-26 Robin Cook <rcook@wyrms.net>
 	* DEPENDS: typo correction
 
