--- a/xorg-lib/libxdamage/HISTORY
+++ b/xorg-lib/libxdamage/HISTORY
@@ -1,3 +1,6 @@
+2008-03-16 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Auto-conflicts with all prior monolithic X providers
+
 2007-03-21 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: updato to 1.1.1
 
@@ -48,3 +51,4 @@
 
 2005-11-25 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS, HISTORY: created spell
+
