--- a/xorg-app/fonttosfnt/HISTORY
+++ b/xorg-app/fonttosfnt/HISTORY
@@ -1,3 +1,6 @@
+2008-03-16 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Auto-conflicts with all prior monolithic X providers
+
 2007-01-06 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: version update
 
@@ -34,3 +37,4 @@
 
 2005-11-25 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS, HISTORY: created spell
+
