--- a/xorg-app/mkfontscale/HISTORY
+++ b/xorg-app/mkfontscale/HISTORY
@@ -1,3 +1,6 @@
+2008-03-16 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Auto-conflicts with all prior monolithic X providers
+
 2007-08-11 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Depends on xproto
 
