--- a/xorg-app/xdm/HISTORY
+++ b/xorg-app/xdm/HISTORY
@@ -1,3 +1,6 @@
+2008-03-16 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Auto-conflicts with all prior monolithic X providers
+
 2007-10-15 Juuso Alasuutari <iuso@sourcemage.org>
 	* DEPENDS: Added suggest_depends xrdb for customizable login
 	  window, fixes bug #13209.
