--- a/xorg-app/xev/HISTORY
+++ b/xorg-app/xev/HISTORY
@@ -1,4 +1,7 @@
-2007-08-03  Treeve Jelbert <treeve@sourcemage.org>
+2008-03-16 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Auto-conflicts with all prior monolithic X providers
+
+2007-08-03  Treevi Jelbert <treeve@sourcemage.org>
 	* DETAILS: update description & short (automated)
 
 2006-08-27 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
@@ -28,3 +31,4 @@
 
 2005-11-25 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS, HISTORY: created spell
+
