--- a/xorg-app/xmessage/HISTORY
+++ b/xorg-app/xmessage/HISTORY
@@ -1,3 +1,6 @@
+2008-03-16 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Auto-conflicts with all prior monolithic X providers
+
 2007-10-31 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DEPENDS: added a sub_depends on libxaw.so.8
 
@@ -44,3 +47,4 @@
 
 2005-11-25 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS, HISTORY: created spell
+
