--- a/xorg-app/xsetpointer/HISTORY
+++ b/xorg-app/xsetpointer/HISTORY
@@ -1,3 +1,6 @@
+2008-03-16 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Auto-conflicts with all prior monolithic X providers
+
 2006-11-05 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: update to 1.0.1
 
@@ -24,3 +27,4 @@
 
 2005-11-25 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS, HISTORY: created spell
+
