--- a/xorg-data/xcursor-themes/HISTORY
+++ b/xorg-data/xcursor-themes/HISTORY
@@ -1,3 +1,6 @@
+2008-03-16 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Auto-conflicts with all prior monolithic X providers
+
 2007-10-14 Ismael E. Luceno <ismael.luceno@gmail.com>
 	* DETAILS: updated description & short
 
@@ -27,3 +30,4 @@
 
 2005-11-25 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS, HISTORY: created spell
+
