--- a/xorg-driver/linuxwacom/HISTORY
+++ b/xorg-driver/linuxwacom/HISTORY
@@ -1,5 +1,9 @@
+2008-03-16 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Auto-conflicts with all prior monolithic X providers
+
 2007-10-12 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: updated spell to 0.7.8-3
 
 2006-01-08 Robin Cook <rcook@wyrms.net>
 	* Initial spell
+
