--- a/xorg-driver/xf86-input-joystick/HISTORY
+++ b/xorg-driver/xf86-input-joystick/HISTORY
@@ -1,3 +1,6 @@
+2008-03-16 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Auto-conflicts with all prior monolithic X providers
+
 2007-12-02 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: updated spell to 1.3.0
 
@@ -50,3 +53,4 @@
 
 2005-11-25 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS, HISTORY: created spell
+
