--- a/xorg-driver/xf86-input-tek4957/HISTORY
+++ b/xorg-driver/xf86-input-tek4957/HISTORY
@@ -1,3 +1,6 @@
+2008-03-16 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Auto-conflicts with all prior monolithic X providers
+
 2007-07-14 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: description update
 
@@ -34,3 +37,4 @@
 
 2005-11-25 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS, HISTORY: created spell
+
