--- a/xorg-driver/xf86-video-ati/HISTORY
+++ b/xorg-driver/xf86-video-ati/HISTORY
@@ -1,3 +1,6 @@
+2008-03-16 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Auto-conflicts with all prior monolithic X providers
+
 2007-08-11 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: updated spell to 6.6.193
 
@@ -82,3 +85,4 @@
 
 2005-11-25 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS, HISTORY: created spell
+
