--- a/xorg-driver/xf86-video-impact/HISTORY
+++ b/xorg-driver/xf86-video-impact/HISTORY
@@ -1,5 +1,9 @@
+2008-03-16 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Auto-conflicts with all prior monolithic X providers
+
 2007-10-04  Ismael E. Luceno <ismael.luceno@gmail.com>
 	* DETAILS: update description & short
 
 2006-08-25 Robin Cook <rcook@wyrms.net>
 	* DETAILS, DEPENDS, HISTORY: created spell
+
