--- a/xorg-driver/xf86-video-radeonhd/HISTORY
+++ b/xorg-driver/xf86-video-radeonhd/HISTORY
@@ -1,3 +1,6 @@
+2008-03-16 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Auto-conflicts with all prior monolithic X providers
+
 2007-11-30 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: added version 1.0.0
 	* PREPARE: added option for SCM version
@@ -6,3 +9,4 @@
 2007-10-23 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS, DEPENDS, HISTORY: created spell
 	* PREPARE, PRE_BUILD: created spell
+
