--- a/xorg-driver/xf86-video-rendition/HISTORY
+++ b/xorg-driver/xf86-video-rendition/HISTORY
@@ -1,3 +1,6 @@
+2008-03-16 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Auto-conflicts with all prior monolithic X providers
+
 2007-07-14 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: updated description
 
@@ -43,3 +46,4 @@
 
 2005-11-25 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS, HISTORY: created spell
+
