--- a/xorg-driver/xf86-video-wsfb/HISTORY
+++ b/xorg-driver/xf86-video-wsfb/HISTORY
@@ -1,3 +1,6 @@
+2008-03-16 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Auto-conflicts with all prior monolithic X providers
+
 2007-10-04  Ismael E. Luceno <ismael.luceno@gmail.com>
 	* DETAILS: update description & short
 
@@ -6,3 +9,4 @@
 
 2006-10-22 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS, DEPENDS, HISTORY: created spell
+
