--- a/xorg-extras/xterm/HISTORY
+++ b/xorg-extras/xterm/HISTORY
@@ -1,3 +1,6 @@
+2008-03-16 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Auto-conflicts with all prior monolithic X providers
+
 2007-08-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: updated spell to 228
 
@@ -43,3 +46,4 @@
 
 2006-01-01 Robin Cook <rcook@wyrms.net>
 	* Initial spell
+
