--- a/xorg-lib/liblbxutil/HISTORY
+++ b/xorg-lib/liblbxutil/HISTORY
@@ -1,3 +1,6 @@
+2008-03-16 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Auto-conflicts with all prior monolithic X providers
+
 2006-05-23 Andraž "ruskie" Levstik <ruskie@mages.ath.cx> 
 	* DETAILS: version update xorg 7.1
 	* DEPENDS: added g++
@@ -31,3 +34,4 @@
 
 2005-11-25 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS, HISTORY: created spell
+
