--- a/xorg-lib/libxcb/HISTORY
+++ b/xorg-lib/libxcb/HISTORY
@@ -1,3 +1,6 @@
+2008-03-16 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Auto-conflicts with all prior monolithic X providers
+
 2007-09-13 Alexander Tsamutali <astsmtl@gmail.com>
 	* PRE_BUILD, sloppy-lock.patch: added to enable optional workaround
 	  for one very popular java bug, thanks to opensuse
@@ -13,3 +16,4 @@
 
 2006-10-22 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS, DEPENDS, HISTORY: created spell
+
