--- a/xorg-lib/libxdmcp/HISTORY
+++ b/xorg-lib/libxdmcp/HISTORY
@@ -1,3 +1,6 @@
+2008-03-16 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Auto-conflicts with all prior monolithic X providers
+
 2006-08-27 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: update to 1.1.7
 
@@ -47,3 +50,4 @@
 
 2005-11-25 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS, HISTORY: created spell
+
