--- a/xorg-lib/libxprintutil/HISTORY
+++ b/xorg-lib/libxprintutil/HISTORY
@@ -1,3 +1,6 @@
+2008-03-16 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Auto-conflicts with all prior monolithic X providers
+
 2005-12-22 Robin Cook <rcook@wyrms.net>
 	* DETAILS: Updated VERSION to 1.0.1
 	  added XORG_VER
@@ -30,3 +33,4 @@
 
 2005-11-25 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS, HISTORY: created spell
+
