--- a/xorg-lib/pixman/HISTORY
+++ b/xorg-lib/pixman/HISTORY
@@ -1,3 +1,6 @@
+2008-03-16 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Auto-conflicts with all prior monolithic X providers
+
 2007-12-02 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: updated spell to 0.9.6
 
@@ -14,3 +17,4 @@
 2007-08-11 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS, DEPENDS, HISTORY: created spell
 	* INSTALL: created spell
+
