--- a/xorg-proto/inputproto/HISTORY
+++ b/xorg-proto/inputproto/HISTORY
@@ -1,3 +1,6 @@
+2008-03-16 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Auto-conflicts with all prior monolithic X providers
+
 2007-09-07 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: updated spell to 1.4.2.1
 
@@ -31,4 +34,5 @@
 
 2005-11-24 Robin Cook <rcook@wyrms.net>
 	* INITIAL: break up of xorg into modules X11R7.0.0	  
+
 
