--- a/xorg-proto/xproto/HISTORY
+++ b/xorg-proto/xproto/HISTORY
@@ -1,3 +1,6 @@
+2008-03-16 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Auto-conflicts with all prior monolithic X providers
+
 2007-10-03 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: updated spell to 7.0.11
 
@@ -40,4 +43,5 @@
 
 2005-11-24 Robin Cook <rcook@wyrms.net>
 	* INITIAL: break up of xorg into modules X11R7.0.0	  
+
 
