--- a/xorg-util/gccmakedep/HISTORY
+++ b/xorg-util/gccmakedep/HISTORY
@@ -1,3 +1,6 @@
+2008-03-16 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Auto-conflicts with all prior monolithic X providers
+
 2007-08-03  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: update description & short (automated)
 
@@ -22,3 +25,4 @@
 
 2005-12-15 Robin Cook <rcook@wyrms.net>
 	* DETAILS, DEPENDS, HISTORY: created spell
+
