--- a/xorg-util/imake/HISTORY
+++ b/xorg-util/imake/HISTORY
@@ -1,3 +1,6 @@
+2008-03-16 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Auto-conflicts with all prior monolithic X providers
+
 2007-08-03  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: update description & short (automated)
 
@@ -27,3 +30,4 @@
 
 2005-11-25 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS, HISTORY: created spell
+
