--- a/xorg-util/lndir/HISTORY
+++ b/xorg-util/lndir/HISTORY
@@ -1,3 +1,6 @@
+2008-03-16 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Auto-conflicts with all prior monolithic X providers
+
 2007-10-14 Ismael E. Luceno <ismael.luceno@gmail.com>
 	* DETAILS: Updated description & short
 
@@ -19,3 +22,4 @@
 
 2005-12-15 Robin Cook <rcook@wyrms.net>
 	* DETAILS, DEPENDS, HISTORY: created spell
+
