--- a/display/xdirectfb/HISTORY
+++ b/display/xdirectfb/HISTORY
@@ -1,3 +1,6 @@
+2008-03-16 Eric Sandall <sandalle@sourcemage.org>
+	* Deprecated in favour of xorg
+
 2007-02-15 Thomas Orgis <sobukus@sourcemage.org>
 	* CONFIGURE, BUILD: make queries for mmx,sse,3dnow instead of
 	  grepping CFLAGS (the -m* flags are gone there)
