--- a/x11-libs/xorg/HISTORY
+++ b/x11-libs/xorg/HISTORY
@@ -1,3 +1,6 @@
+2008-03-16 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Depends on xorg-data-profile
+
 2007-10-25 Eric Sandall <sandalle@sourcemage.org>
 	* Changed to modular X.org profile spell from monolithic X.org
 	  Optionally depends on all drivers
