--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-17 Eric Sandall <sandalle@sourcemage.org>
+	* x11-libs/xorg: Renamed to xorg-profile to allow UP_TRIGGERS to work
+	  better
+
 2007-11-15 Lalo Martins <lalo@sourcemage.org>
 	* compiz-fusion/compiz-fusion-plugins-unsupported: new spell
 
