--- a/display/xdirectfb/HISTORY
+++ b/display/xdirectfb/HISTORY
@@ -1,3 +1,6 @@
+2008-03-17 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: xorg -> xorg-profile
+
 2008-03-16 Eric Sandall <sandalle@sourcemage.org>
 	* Deprecated in favour of xorg
 
