--- a/x11-libs/xfree86-devel/HISTORY
+++ b/x11-libs/xfree86-devel/HISTORY
@@ -1,3 +1,6 @@
+2008-03-17 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: xorg -> xorg-profile
+
 2007-10-25 Eric Sandall <sandalle@sourcemage.org>
 	* Deprecate in favour of modular xorg profile
 
