--- a/x11-libs/xorg-profile/HISTORY
+++ b/x11-libs/xorg-profile/HISTORY
@@ -1,5 +1,6 @@
 2008-03-16 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Depends on xorg-data-profile
+	* CONFLICTS: Auto-onflicts with xorg
 	* UP_TRIGGERS: Recast all spells still using monolithic X providers
 
 2007-10-25 Eric Sandall <sandalle@sourcemage.org>
