--- a/x11-libs/xorg-profile/HISTORY
+++ b/x11-libs/xorg-profile/HISTORY
@@ -1,3 +1,6 @@
+2008-03-17 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Don't depend on deprecated xf86-video-i810
+
 2008-03-16 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Depends on xorg-data-profile
 	* CONFLICTS: Auto-onflicts with xorg
