--- a/x11-libs/xorg-profile/HISTORY
+++ b/x11-libs/xorg-profile/HISTORY
@@ -1,5 +1,6 @@
 2008-03-17 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Don't depend on deprecated xf86-video-i810
+	* UP_TRIGGERS: Fix missing 'do' after for
 
 2008-03-16 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Depends on xorg-data-profile
