--- a/x11-libs/xorg-profile/HISTORY
+++ b/x11-libs/xorg-profile/HISTORY
@@ -2,6 +2,7 @@
 	* DETAILS: Actually rename SPELL to xorg-profile
 	* DEPENDS: Don't depend on deprecated xf86-video-i810
 	* UP_TRIGGERS: Fix missing 'do' after for
+	  provider x11_libs_provider are variables, not commands
 
 2008-03-16 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Depends on xorg-data-profile
