--- a/x11-libs/xorg-profile/HISTORY
+++ b/x11-libs/xorg-profile/HISTORY
@@ -3,6 +3,9 @@
 	* DEPENDS: Don't depend on deprecated xf86-video-i810
 	* UP_TRIGGERS: Fix missing 'do' after for
 	  provider x11_libs_provider are variables, not commands
+	  Not sure what I was thinking...the providers will be gone for this
+	  so we cannot query them via `gaze provides`, instead just check
+	  the spells specifically and then check what depends on them.
 
 2008-03-16 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Depends on xorg-data-profile
