--- a/xorg-data/xorg-data-profile/HISTORY
+++ b/xorg-data/xorg-data-profile/HISTORY
@@ -1,3 +1,6 @@
+2008-03-17 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Auto-conflicts with xorg as well
+
 2008-03-16 Eric Sandall <sandalle@sourcemage.org>
 	* CONFLICTS: xfree86-lib -> xfree86-libs
 	  xfree86-43 -> xfree86-4.3
