--- a/e/e_module-bling/HISTORY
+++ b/e/e_module-bling/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch XDAMAGE to the one and only libxdamage
+
 2006-11-16 Eric Sandall <sandalle@sourcemage.org>
 	* PRE_BUILD: Create config.rpath so ./autogen.sh stops complaining about
 	   missing this useless (for most packages) file
