--- a/kde-core/kdebase/HISTORY
+++ b/kde-core/kdebase/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch XDAMAGE to the one and only libxdamage
+
 2007-10-20 Juuso Alasuutari <iuso@sourcemage.org>
 	* FINAL: Removed warning about paths in kdmrc, they have been made
 	  xorg-modular-compliant.
