--- a/editors/openoffice/HISTORY
+++ b/editors/openoffice/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-SERVER to the one and only xorg-server
+
 2007-03-03 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* BUILD: moved invoke_gcc to PRE_BUILD #10641
 	* CONFLICTS: removed old entries, lowercased
