--- a/kernels/synaptics/HISTORY
+++ b/kernels/synaptics/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-SERVER to the one and only xorg-server
+
 2006-08-29 Flavien Bridault <vlaaad@sourcemage.org>
 	* DETAILS: Updated to 0.14.6
 
