--- a/utils/beagle/HISTORY
+++ b/utils/beagle/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-SERVER to the one and only xorg-server
+
 2007-08-28 George Sherwood <george@beernabeer.com>
 	* DETAILS: updated spell to 0.2.18
 
