--- a/utils/sunbird/HISTORY
+++ b/utils/sunbird/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-SERVER to the one and only xorg-server
+
 2007-08-08 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: corrected SOURCE_URL[0]
 
