--- a/xorg-driver/linuxwacom/HISTORY
+++ b/xorg-driver/linuxwacom/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-SERVER to the one and only xorg-server
+
 2008-03-17 Eric Sandall <sandalle@sourcemage.org>
 	* CONFLICTS: Auto-conflicts with xorg as well
 
