--- a/display/directfb/HISTORY
+++ b/display/directfb/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-SERVER to the one and only xorg-server
+
 2007-09-23 Arjan Bouter <abouter@sourcemage.org>
 	* CONFIGURE: fixed typo
 	* DEPENDS: added warning for SDL, added libvncserver
