--- a/display/qingy/HISTORY
+++ b/display/qingy/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-SERVER to the one and only xorg-server
+
 2007-04-27 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 0.9.6
 	  Removed PATCHLEVEL
