--- a/audio-creation/vkeybd/HISTORY
+++ b/audio-creation/vkeybd/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-LIBS to the one and only xorg-libs
+
 2006-08-11 Juuso Alasuutari <iuso@sourcemage.org>
 	* DEPENDS: Added depends X11-LIBS.
 	* PRE_BUILD: Fix dirs for xorg-modular, insert $TRACK_ROOT.
