--- a/audio-creation/xsynth/HISTORY
+++ b/audio-creation/xsynth/HISTORY
@@ -1,2 +1,5 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-LIBS to the one and only xorg-libs
+
 2007-03-24 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS, CONFIGURE, DEPENDS, PRE_BUILD, BUILD, INSTALL: Created spell.
