--- a/e/imlib2/HISTORY
+++ b/e/imlib2/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-LIBS to the one and only xorg-libs
+
 2007-05-06 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.4.0
 
