--- a/graphics/mesademos/HISTORY
+++ b/graphics/mesademos/HISTORY
@@ -1,4 +1,7 @@
 2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-LIBS to the one and only xorg-libs
+
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Switch X11-UTILS to the one and only xorg-utils
 
 2007-08-07 Ladislav Hagara <hgr@vabo.cz>
