--- a/graphics-libs/freetype1/HISTORY
+++ b/graphics-libs/freetype1/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-LIBS to the one and only xorg-libs
+
 2007-01-13 Juuso Alasuutari <iuso@sourcemage.org>
 	* DEPENDS: Added depends gettext (fixes #13396), added 
 	  xorg-modular dependencies.
