--- a/graphics-libs/vips/HISTORY
+++ b/graphics-libs/vips/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-LIBS to the one and only xorg-libs
+
 2006-09-18 Flavien Bridault <vlaaad@sourcemage.org>
 	* DETAILS: Updated to 7.10.21
 
