--- a/haskell/haskell-x11/HISTORY
+++ b/haskell/haskell-x11/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-LIBS to the one and only xorg-libs
+
 2007-10-21 Alexander Tsamutali <astsmtl@gmail.com>
 	* DETAILS: updated spell to 1.2.3
 
