--- a/utils/sisctrl/HISTORY
+++ b/utils/sisctrl/HISTORY
@@ -1,2 +1,5 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-LIBS to the one and only xorg-libs
+
 2007-01-25 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DETAILS, DEPENDS, HISTORY: created spell
