--- a/video/tvtime/HISTORY
+++ b/video/tvtime/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-LIBS to the one and only xorg-libs
+
 2006-09-28 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: update to 1.0.2
 	* DEPENDS: update for -modular
