--- a/windowmanagers/dwm/HISTORY
+++ b/windowmanagers/dwm/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-LIBS to the one and only xorg-libs
+
 2007-10-07 Mathieu Lonjaret <lejatorn@sourcemage.org>
 	* DETAILS: update to 4.5
 
