--- a/windowmanagers/jwm/HISTORY
+++ b/windowmanagers/jwm/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-LIBS to the one and only xorg-libs
+
 2007-08-25 Arjan Bouter <abouter@sourcemage.org>
 	* PRE_BUILD: separated the rootmenu
 	* startjwm,jwm.desktop: added
