--- a/windowmanagers/openbox/HISTORY
+++ b/windowmanagers/openbox/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-LIBS to the one and only xorg-libs
+
 2007-08-09 Martin Spitzbarth <m.spitzbarth@gmx.de>
 	* DETAILS: updated spell to 3.4.4
 
