--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-17 Juuso Alasuutari <iuso@sourcemage.org>
+	* dave_robillard.gpg: Added Dave Robillar's GPG key, needed by
+	  spells in more than one section.
+
 2008-03-17 Ethan Grammatikidis <eekee57@fastmail.fm>
 	* python-pypi/boodler: new spell, a tool for creating
 	  soundscapes -- continuous, infinitely varying streams of sound.
