--- a/x11/conky/HISTORY
+++ b/x11/conky/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-LIBS to the one and only xorg-libs
+
 2007-10-01 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.4.7
 	* DEPENDS: Optionally depends on wireless_tools for WLAN support
