--- a/xfce/xfce4-profile/HISTORY
+++ b/xfce/xfce4-profile/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-LIBS to the one and only xorg-libs
+
 2007-05-18 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Format all optional dependencies to < 80 columns
 	  Alphabetize optional dependencies
