--- a/xfce/xfwm4/HISTORY
+++ b/xfce/xfwm4/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch XDAMAGE to the one and only libxdamage
+
 2007-09-30 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* DEPENDS: provider for XDAMAGE is libxdamage, not xorg-server
 
