--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
 	  spells in more than one section.
 	* audio-libs/raul: New spell, a C++ utility library aimed at
 	  audio applications.
+	* graphics-libs/flowcanvas: New spell, a Gtkmm/Gnomecanvasmm
+	  widget for finite state automata diagrams.
 
 2008-03-17 Ethan Grammatikidis <eekee57@fastmail.fm>
 	* python-pypi/boodler: new spell, a tool for creating
