--- a/graphics-libs/mesalib/HISTORY
+++ b/graphics-libs/mesalib/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* PRE_BUILD: xorg-utils is the only X11-UTILS now
+
 2007-11-23 Eric Sandall <sandalle@sourcemage.org>
 	* CONFLICTS: No longer conflicts with xorg-modular profile spell, xorg
 
