--- a/kde4-apps/koffice2/HISTORY
+++ b/kde4-apps/koffice2/HISTORY
@@ -1,177 +1,4 @@
-2011-10-09 Ismael Luceno <ismael@sourcemage.org>
-	* DETAILS: updated spell to 2.3.3
-
-2011-10-04 Bor Kraljič <pyrobor@ver.si>
-	* DEPENDS: fixed typo
-
-2011-09-04 Bor Kraljič <pyrobor@ver.si>
-	* DETAILS: PATCHLEVEL++ for /opt/kde4 -> /usr change
-
-2011-08-16 Bor Kraljič <pyrobor@ver.si>
-	* DEPENDS: kdegraphics4 -> libkdcraw4
-
-2011-02-17 Bor Kraljič <pyrobor@ver.si>
-	* DETAILS: updated spell to 2.3.1
-
-2010-04-12 Eric Sandall <sandalle@sourcemage.org>
-	* PRE_BUILD: stable has ora CMakeList.txt in same location as unstable
-
-2010-04-06 Philippe "Puppet_Master" Caseiro  <puppetmaster@sourcemage.org>
-	* DEPENDS: updated mysql dependency to MYSQL provider
-
-2010-04-02 Treeve Jelbert <treeve@sourcemage.org>
-	* DEPENDS: boost is also needed for the TINY configuration
-
-2010-02-08 Treeve Jelbert <treeve@sourcemage.org>
-	* DEPENDS: add optional create
-
-2010-01-17 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 2.1.1
-
-2009-11-22 Treeve Jelbert <treeve@sourcemage.org>
-	* CONFIGURE: added, prompt for tiny koffice
-	* BUILD: added
-	* DEPENDS: restructure for tiny build
-	* DEPENDS: remove graphicsmagick, no longer used
-	  add openjpeg, boost
-
-2009-10-28 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 2.0.91 (unstable)
-
-2009-10-18 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: removing trigger on kdelibs4
-	* DEPENDS: delete libart_lgpl
-
-2009-10-01 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 2.0.83 (unstable)
-
-2009-09-17 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 2.0.82 (unstable)
-
-2009-08-28 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 2.0.81 (unstable)
-	* PREPARE: added support for unstable version
-	* PRE_BUILD: adjust for unstable
-	* DEPENDS: add gmm
-
-2009-08-12 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 2.0.2
-
-2009-06-25 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 2.0.1
-
-2009-06-03 Treeve Jelbert <treeve@sourcemage.org>
-	* DEPENDS: remove libexif, not needed
-
-2009-05-28 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 2.0.0
-	* PRE_BUILD: remove exceptions fix
-
-2009-04-08 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 1.9.99.0
-	* PRE_BUILD: don't apply patch
-	  fix exceptions problem for:
-	  krita/plugins/filters/imageenhancement/kis_wavelet_noise_reduction.cpp
-	* wv2.patch: deleted
-
-2009-03-06 Treeve Jelbert <treeve@sourcemage.org>
-	* wv2.patch: added, upstream patch, for amd64
-	* PRE_BUILD: apply patch
-	* wv2.patch: remove inapplicable part
-
-2009-03-05 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 1.9.98.7
-	* exiv2.diff: deleted
-	* PRE_BUILD: don't apply patch
-
-2009-02-05 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 1.9.98.6
-	* exiv2.diff: added, fix compile with latest exiv2
-	* PRE_BUILD: apply patch
-
-2009-01-14 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 1.9.98.5
-
-2008-12-11 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 1.9.98.3
-
-2008-12-04 Treeve Jelbert <treeve@sourcemage.org>
-	* DEPENDS: add optional gsl, pstoedit
-
-2008-11-28 Treeve Jelbert <treeve@sourcemage.org>
-	* PRE_BUILD: added, prevent update_xdg_mimetypes
-	  fixes bug #14918
-
-2008-11-20 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 1.9.98.2
-
-2008-10-16 Treeve Jelbert <treeve@sourcemage.org>
-	* DEPENDS: add optional kdegraphics4
-
-2008-10-15 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 1.9.98.1
-
-2008-09-22 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 1.9.98.0
-
-2008-09-14 Treeve Jelbert <treeve@sourcemage.org>
-	* DEPENDS: fix path for eigen2
-
-2008-09-01 Treeve Jelbert <treeve@sourcemage.org>
-	* DEPENDS: eigen -> eigen2
-
-2008-08-29 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 1.9.95.10
-
-2008-08-08-03 Treeve Jelbert <treeve@sourcemage.org>
-	* DEPENDS: update some descriptions
-	  add optional xbase
-
-2008-07-15 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 1.9.95.9
-
-2008-05-27 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 1.9.95.8
-
-2008-05-01 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 1.9.95.4
-
-2007-02-18 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: tarball moved to unstable
-
-2007-02-16 Treeve Jelbert <treeve@sourcemage.org>
-	* DEPENDS: add optional libwpg
-
-2007-02-10 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 1.9.95.3 (stable)
-
-2007-02-08 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 771426
-
-2007-02-01 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 768399
-	  unstable snapshot
-
-2007-12-11 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 1.9.95.1
-
-2007-11-28 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 1.9.95
-	* DEPENDS: add libwpd
-
-2007-10-18 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 1.9.94
-
-2007-09-06 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 1.9.93
-	* DEPENDS: add libart_lgpl, qimageblitz, kdepimlibs4, glpk
-
-2007-08-02 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 1.9.92
-
-2007-07-08 Treeve Jelbert <treeve@sourcemage.org>
-	* TRIGGERS: should be kdelibs4
-
-2007-07-07 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 1.9.91
-	  first attempt at kde4 version 
+2013-08-13  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0
+	  PATCHLEVEL=9999
+	  spell deprecated [replaced by calligra]
