--- a/kde4-multimedia/kmix/HISTORY
+++ b/kde4-multimedia/kmix/HISTORY
@@ -1,3 +1,6 @@
+2013-08-13 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 4.10.5
+
 2013-07-09 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: alsa-libs -> alsa-lib
 
