--- a/kde4-bindings/pykde4/HISTORY
+++ b/kde4-bindings/pykde4/HISTORY
@@ -1,3 +1,6 @@
+2013-08-13 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 4.10.5
+
 2013-07-10 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Depends on phonon
 
