--- a/kde4-support/shared-desktop-ontologies/HISTORY
+++ b/kde4-support/shared-desktop-ontologies/HISTORY
@@ -1,3 +1,6 @@
+2013-08-13 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.11.0
+
 2012-08-15 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.10.0, SOURCE_URL[0] updated
 
