--- a/utils/hal/HISTORY
+++ b/utils/hal/HISTORY
@@ -1,3 +1,8 @@
+2013-08-13 Eric Sandall <sandalle@sourcemage.org>
+	* PRE_BUILD: Apply glibc-2.17.patch
+	* glibc-2.17.patch: Added from http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=701432
+	  Fixes compilation against glibc 2.17+
+
 2012-05-09 Treeve Jelbert <treeve@sourcemage.org> 
 	* DEPENDS: libusb => LIBUSB
 
